k8s-manifests/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-service
  namespace: production
  labels:
    app: flask-app
spec:
  type: ClusterIP
  selector:
    app: flask-app
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 5000
